--- a/style/style.css
+++ b/style/style.css
@@ -661,6 +661,7 @@ section {
     text-transform: uppercase;
     width: fit-content;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .contact .text span {
